--- a/package.json
+++ b/package.json
@@ -26,12 +26,16 @@
 		"clsx": "^2.1.1",
 		"cmdk": "1.0.0",
 		"date-fns": "^4.0.0",
+		"googleapis": "^144.0.0",
 		"lucide-react": "^0.441.0",
+		"nanoid": "^5.0.7",
 		"next": "14.2.11",
+		"otp-generator": "^4.0.1",
 		"react": "^18",
 		"react-day-picker": "9.0.8",
 		"react-dom": "^18",
 		"react-hook-form": "^7.53.0",
+		"react-icons": "^5.3.0",
 		"tailwind-merge": "^2.5.2",
 		"tailwindcss-animate": "^1.0.7",
 		"zod": "^3.23.8",
@@ -39,6 +43,7 @@
 	},
 	"devDependencies": {
 		"@types/node": "^20",
+		"@types/otp-generator": "^4.0.2",
 		"@types/react": "^18",
 		"@types/react-dom": "^18",
 		"eslint": "^8",
