--- a/package.json
+++ b/package.json
@@ -28,7 +28,6 @@
 		"date-fns": "^4.0.0",
 		"googleapis": "^144.0.0",
 		"lucide-react": "^0.441.0",
-		"nanoid": "^5.0.7",
 		"next": "14.2.11",
 		"otp-generator": "^4.0.1",
 		"react": "^18",
@@ -36,6 +35,7 @@
 		"react-dom": "^18",
 		"react-hook-form": "^7.53.0",
 		"react-icons": "^5.3.0",
+		"sharp": "^0.33.5",
 		"tailwind-merge": "^2.5.2",
 		"tailwindcss-animate": "^1.0.7",
 		"zod": "^3.23.8",
