--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
 		"clsx": "^2.1.1",
 		"cmdk": "1.0.0",
 		"date-fns": "^4.0.0",
+		"date-fns-tz": "^3.2.0",
 		"googleapis": "^144.0.0",
 		"lucide-react": "^0.441.0",
 		"next": "14.2.11",
